# photon-docker

./: .gitignore  Brewfile  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  docker-compose.test.yml  entrypoint.sh  prek.toml  pyproject.toml  renovate.json
.github/: release-drafter.yml
.github/workflows/: lint.yml  pytest.yml  release-drafter.yml
src/: downloader.py  entrypoint.py  filesystem.py  process_manager.py
src/utils/: config.py  regions.py  s3.py
tests/utils/: test_regions.py  test_sanitize.py  test_validate_config.py
